# nlp-assignment-2025

./: .gitignore  pyproject.toml
data/: text1.txt  text2.txt
src/: test.py  tokenization.py
src/nlp-assignment/: pipeline_custom.py  setup_nltk.py
